$Id: NEWS,v 1.363 2003-01-30 19:05:01 jwm Exp $

CVS
---
- Bug 1863 - Unable to build under UnixWare 7

1.2.8rc2 - Released 29-Jan-2003
---------------------------------
- Bug 1894 - Double chdir into self-referencing symlink fails with
  "No such file or directory".  The errno value has been changed from
   ENOENT to ELOOP.
- Bug 1272 - Requested Addition: DenyFilter by User or DenyFilter by Directory.
  AllowFilter and DenyFilter are now extended to <Directory> and .ftpaccess
  contexts.
- Bug 1671 - new directive SQLLogFile.
- mod_linuxprivs has been renamed to mod_cap and is now built into ProFTPD
  by default if the host OS (Linux) supports it. autoconf detection code
  based on a submission by Mihai RUSU <dizzy@roedu.net>.  The mod_cap
  directives are CapabilitiesEngine and CapabilitiesSet.
- Bug 1893 - Apple likes to move things. PAM support works on OS X again.
  Submitted by: thesin@users.sourceforge.net (Justin F. Hallett)
- Bug 1826 - Makefiles are a bit icky
- Bug 1904 - Tru64 UNIX 4.0D and sstrncpy()
- Bug 1891 - SGI syslog isn't being written to.  Turns out that /dev/log on
  SGI is a STREAMS device, just as for Solaris.  The fix for this bug works
  for IRIX6; earlier versions of IRIX may still see this bug.
- Bug 1919 - <Directory> section already configured for $dir needs
  clarification.  This has been resolved by adding a debug statement (level 2)
  to the <Directory> handler that reports on the given/resolved paths used.
- Bug 1910 - ProFTPD hangs on SIGHUP.  This was triggered by mixing stdio
  and regular I/O library calls related to password and group entries.
- Add -Wundef and -Wfloat-equal to CFLAGS (Suggested by Steve Grubb
  <linux_4ever@yahoo.com>)
- Fixed broken tcpReceiveWindow and tcpSendWindow configuration directives.
  The setsockopt(2) function was being called at the wrong time during the
  establishment of the data connection.
- %f for DELE commands was not being properly expanded.